Upgrade to Java 17 - fix Sonar findings